--- a/back_end/.env
+++ b/back_end/.env
@@ -22,7 +22,7 @@ SMTP_HOST=email-server
 SMTP_PORT=587
 SMTP_USERNAME=email-server-username
 SMTP_PASSWORD=email-server-password
-EMAIL_FROM=support@yourapp.comgit
+EMAIL_FROM=support@yourapp.com
 
 
 # Block time
